# juego-poo

./: .gitignore  CMakeLists.txt  CREDITS.md  LICENSE  README.md
assets/textures/: fondo  mapa.csv  mapacol.csv
data/config/: config.txt  profile.txt
data/globalstats/: stats.txt
include/core/: AudioManager.hpp  ConfigManager.hpp  Drawble.hpp  Game.hpp  Keys.hpp  Scene.hpp
include/gameplay/: Abilities.hpp  Ability.hpp  DashAbility.hpp  HealingAbility.hpp  ShieldAbility.hpp  ShootAbility.hpp  Stats.hpp
include/scenes/: GameOver.hpp  Match.hpp  Pause.hpp  menu.hpp  rankingScene.hpp  settingsScene.hpp
include/ui/: Hud.hpp  InputText.hpp
include/world/: Entity.hpp  Mapa.hpp  Player.hpp  Tree.hpp  Zombie.hpp  obstacle.hpp
src/: Abilities.cpp  Abilities.hpp  Ability.cpp  Ability.hpp  DashAbility.cpp  DashAbility.hpp  Drawble.h  Entity.hpp  Game.cpp  Game.hpp  GameOver.cpp  GameOver.hpp  HealingAbility.cpp  HealingAbility.hpp  Hud.cpp  Hud.hpp  Inventory.hpp  Item.hpp  Keys.hpp  Mapa.cpp  Mapa.h  Mapa.hpp  Match.cpp  Match.hpp  Pause.cpp  Pause.hpp  Player.cpp  Player.hpp  Scene.cpp  Scene.hpp  ShieldAbility.cpp  ShieldAbility.hpp  ShootAbility.cpp  ShootAbility.hpp  Stats.cpp  Stats.hpp  Tree.cpp  Tree.hpp  Zombie.cpp  Zombie.h  (+10 more)
src/core/: AudioManager.cpp  ConfigManager.cpp  Game.cpp  Game.hpp  Player.cpp  Player.hpp  Scene.cpp
src/gameplay/: Abilities.cpp  DashAbility.cpp  HealingAbility.cpp  ShieldAbility.cpp  ShootAbility.cpp  Stats.cpp
src/scenes/: GameOver.cpp  Match.cpp  Pause.cpp  menu.cpp  rankingScene.cpp  settingsScene.cpp
src/ui/: Hud.cpp
src/world/: Mapa.cpp  Player.cpp  Tree.cpp  Zombie.cpp
tests/: prueba  prueba.cpp
(+15 files in other folders)
